name:		lenz-mtl
version:	0.1
synopsis:	mtl operations with Van Laarhoven lenses
license:	OtherLicense
license-file:	LICENSE
author:		M Farkas-Dyck
maintainer:	strake888@gmail.com
category:	Control, Data, Lenses
build-type:	Simple
cabal-version:	>=1.2
tested-with:    GHC ==7.10.*
              , GHC ==7.12.*
              , GHC ==8.0.*
              , GHC ==8.2.*
              , GHC ==8.4.*
              , GHC ==8.6.*
              , GHC ==8.8.*

library
  exposed-modules:     Control.Monad.Reader.Lens
                     , Control.Monad.Writer.Lens
                     , Control.Monad.State.Lens
  build-depends:       base >=4.8 && <5
                     , base-unicode-symbols
                     , lenz >=0.2 && <0.5
                     , transformers >=0.2 && <0.6
                     , mtl >=2.0 && <2.3
  extensions:          UnicodeSyntax, RankNTypes
